--- a/index.html
+++ b/index.html
@@ -10,19 +10,26 @@
 <body>
     <div class="dashboard">
         <div class="dashboard-header">
-            <div class="header-content">
-                <div class="brand-group">
-                    <img src="https://cdn.builder.io/api/v1/image/assets%2Fbd65b3cd7a86452e803a3d7dc7a3d048%2Fc540452a3db046ac922bafa84f938adc?format=webp&width=800" alt="STC Logo" class="logo logo-left">
-                    <div class="title-block">
-                        <h1 class="header-title">Central Fuel Plan Dashboard</h1>
-                    </div>
-                    <img src="https://cdn.builder.io/api/v1/image/assets%2Fbd65b3cd7a86452e803a3d7dc7a3d048%2F2a2ac0238b1444ef9a1b89619ad94b40?format=webp&width=400" alt="ACES Managed Services Logo" class="logo logo-right">
-                </div>
-                <div class="header-actions">
-                    <span class="status-pill live">Live data</span>
+    <div class="header-content">
+        <div class="brand-group">
+            <!-- Left Logo -->
+            <img src="https://cdn.builder.io/api/v1/image/assets%2Fbd65b3cd7a86452e803a3d7dc7a3d048%2Fc540452a3db046ac922bafa84f938adc?format=webp&width=800" 
+                 alt="STC Logo" class="logo logo-left">
+            <!-- Center Title + Live Data Group -->
+            <div class="title-block" style="display:flex; flex-direction:column; align-items:center; gap:4px;">
+                <h1 class="header-title">Central Fuel Plan Dashboard</h1>
+                <!-- LIVE DATA moved here -->
+                <div class="header-actions" style="margin:0; padding:0;">
+                    <span class="status-pill live">Live Data</span>
                 </div>
             </div>
+            <!-- Right Logo -->
+            <img src="https://cdn.builder.io/api/v1/image/assets%2Fbd65b3cd7a86452e803a3d7dc7a3d048%2F2a2ac0238b1444ef9a1b89619ad94b40?format=webp&width=400" 
+                 alt="ACES Managed Services Logo" class="logo logo-right">
         </div>
+    </div>
+</div>
+
         <div class="left-panel">
             <div class="panel-header"></div>
 
