--- a/index.html
+++ b/index.html
@@ -31,7 +31,14 @@
 </div>
 
         <div class="left-panel">
-            <div class="panel-header"></div>
+          <div class="panel-header">
+    <div class="search-container">
+        <input id="siteSearchInput" type="text" placeholder="Search Site ID... (e.g., COW020)">
+        <button id="searchBtn">Search</button>
+    </div>
+    <div id="searchResult" class="search-result"></div>
+</div>
+
 
             <div class="metrics-grid">
                 <div class="metric-box">
