Add COW ID search for fuel plan lookup

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="left-panel">
           <div class="panel-header">
     <div class="search-container">
-        <input id="siteSearchInput" type="text" placeholder="Search Site ID... (e.g., COW020)">
+        <input id="siteSearchInput" type="text" placeholder="Search COW ID... (e.g., COW020)">
         <button id="searchBtn">Search</button>
     </div>
     <div id="searchResult" class="search-result"></div>
