--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="search-container">
                     <input id="siteSearchInput" 
                         type="text" 
-                        placeholder="Search Site ID / COW ID... (e.g., COW020, ZRH123)"
+                        placeholder="Search Site ID / COW ID... 
                     >
 
                     <button id="searchBtn">Search</button>
