--- a/index.html
+++ b/index.html
@@ -146,6 +146,14 @@
     <!-- JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.js"></script>
     <script src="script.js"></script>
+<!-- SEARCH RESULT POPUP -->
+<div id="searchPopup" class="search-popup">
+    <div class="popup-inner">
+        <span id="popupClose" class="popup-close">&times;</span>
+        <h3>Search Result</h3>
+        <p id="popupContent"></p>
+    </div>
+</div>
 
 </body>
 </html>
