--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             id="emailInput"
             name="email"
             type="email"
-            placeholder="you@aces.sa"
+            placeholder="Enter user-name"
             required
           />
 
@@ -42,7 +42,7 @@
             id="accessCodeInput"
             name="accessCode"
             type="password"
-            placeholder="Enter your secure code"
+            placeholder="Enter your password"
             required
           />
 
